[package]
name = "frontend-macroquad"
version = "0.1.0"
authors = ["TomasKralCZ <tomas@kral.hk>"]
edition = "2018"
default-run = "frontend-macroquad"

[dependencies]
fearless_nes = { path = "../nes" }
macroquad = "0.3"
egui = "0.14"
egui-macroquad = "0.6"
native-dialog = "0.5"
gilrs = { version = "0.8", features = ["serde-serialize"] }
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
png = "0.17"
directories = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
thiserror = "1.0"
