[package]
name = "fearless_nes"
version = "0.1.0"
authors = ["TomasKralCZ <tomas@kral.hk>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
siphasher = "0.3"
roxmltree = "0.14"
sha-1 = "0.9"
thiserror = "1.0"

[features]
integration_tests = []

[[bin]]
name = "bench"
